--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -6,3 +6,24 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.element {
+  align-items: center;
+  background: linear-gradient(-45deg, rgba(0,0,0,0.22), rgba(255,255,255,0.25));
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+   -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+  border-radius: 6px;
+  display: flex;
+ 
+  justify-content: center;
+ 
+}
+
+.element-3 {
+  background: rgb(48, 48, 196);
+  opacity: 80%;
+}
+
+
+
+
