--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
 	body {
-		font-family: 'Poppins', sans-serif;
+		font-family: 'Quicksand', sans-serif;
 		margin: 0;
 		padding: 0;
 	}
